--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -4,7 +4,7 @@
         <i class="fas fa-info-circle me-2"></i>Información Importante
       </div>
       <button class="btn-close" (click)="hideAnnouncement()" title="Cerrar">
-        <i class="fas fa-times"></i>
+        <i class="fas fa-times">Cerrar</i>
       </button>
     </div>
     <div class="card-body">
