actulizar cuantos se ven

--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -4,7 +4,7 @@
         <i class="fas fa-info-circle me-2"></i>Información Importante
       </div>
       <button class="btn-close" (click)="hideAnnouncement()" title="Cerrar">
-        <i class="fas fa-times">Cerrar</i>
+        <i>Cerrar</i>
       </button>
     </div>
     <div class="card-body">
@@ -26,7 +26,7 @@
               <i class="fas fa-laptop-code text-primary"></i>
             </div>
             <div>
-              <p class="mb-1">Desarrollado por una sola persona:</p>
+              <p class="mb-1">Desarrollado por <b>Sebastian Vega</b>:</p>
               <h6 class="mb-2">Estudiante de Ingeniería de Sistemas - UPTC Sogamoso 2025-II</h6>
               <div class="social-links">
                 <a href="https://github.com/SebastianVega4" target="_blank">
